--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <nav id="nav">
       <ul class="container">
         <li><a href="#top">Top</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
+        <!-- <li><a href="#portfolio">Portfolio</a></li> -->
         <li><a href="#contact">Contact</a></li>
+        <li><a href="Daniel_Cao_Resume.pdf" target="_blank">Resume</a></li>
       </ul>
     </nav>
 
@@ -41,6 +43,53 @@
               <strong>Creator</strong> focused on crafting clean and
               user-friendly experiences.
             </p>
+            <div>
+              <h1 class="focus">Current Focus:</h1>
+              <h3>UX | UI | REACT | MOBILE APPS</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <!-- Skills -->
+    <article id="about" class="wrapper style2">
+      <header>
+        <h1>About</h1>
+      </header>
+      <div class="container">
+        <div class="row aln-center">
+          <div class="col-12 col-12-xlarge col-12-small">
+            <div class="box style3">
+              <h3 class="work">Skills</h3>
+              <hr class="line2" />
+              <div class="row text-center">
+                <div class="skills">
+                  <img class="skillsimage" src="images/java.svg.png" alt="" />
+                  <h4>JAVA</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/cpp.png" alt="" />
+                  <h4>C++</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/python.png" alt="" />
+                  <h4>PYTHON</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/html5.svg.png" alt="" />
+                  <h4>HTML5</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/CSS.svg.png" alt="" />
+                  <h4>CSS3</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/javascript.png" alt="" />
+                  <h4>JAVASCRIPT</h4>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -48,21 +97,25 @@
 
     <!-- Work -->
     <article id="work" class="wrapper style2">
+      <header>
+        <h1>Work</h1>
+      </header>
       <div class="container">
         <div class="row aln-center">
           <div class="col-4 col-6-medium col-12-small">
-            <section class="box style1">
-              <!-- <span class="icon featured fa-comments"></span> -->
+            <div class="box style1">
               <h3 class="work">Projects</h3>
+              <hr class="line" />
               <a href="#" class="image featured"
-                ><img src="images/Projects.jpg" alt="" />
+                ><img src="images/Projects.jpg" />
               </a>
-            </section>
+            </div>
           </div>
           <div class="col-4 col-6-medium col-12-small">
             <section class="box style1">
               <!-- <span class="icon solid featured fa-camera-retro"></span> -->
               <h3 class="work">UX/UI</h3>
+              <hr class="line" />
               <a href="#" class="image featured"
                 ><img src="images/UI_UX_Design.jpg" alt="" />
               </a>
@@ -72,6 +125,7 @@
             <section class="box style1">
               <!-- <span class="icon featured fa-thumbs-up"></span> -->
               <h3 class="work">Photography</h3>
+              <hr class="line" />
               <a href="#" class="image featured"
                 ><img class="photo" src="images/photography.jpg" alt="" />
               </a>
@@ -81,8 +135,11 @@
       </div>
     </article>
 
-    <!-- Portfolio -->
-    <article id="portfolio" class="wrapper style3">
+    <!-- Blog -->
+    <!-- <article id="portfolio" class="wrapper style3">
+      <header>
+        <h1>Blog</h1>
+      </header>
       <div class="container">
         <div class="row">
           <div class="col-4 col-6-medium col-12-small">
@@ -141,7 +198,7 @@
           </div>
         </div>
       </div>
-    </article>
+    </article> -->
 
     <!-- Contact -->
     <article id="contact" class="wrapper style4">
