--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav id="nav">
       <ul class="container">
         <li><a href="#top">Top</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about">Skills</a></li>
         <li><a href="#work">Work</a></li>
         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
         <li><a href="#contact">Contact</a></li>
@@ -55,13 +55,13 @@
     <!-- Skills -->
     <article id="about" class="wrapper style2">
       <header>
-        <h1>About</h1>
+        <h1>Skills</h1>
       </header>
       <div class="container">
         <div class="row aln-center">
           <div class="col-12 col-12-xlarge col-12-small">
             <div class="box style3">
-              <h3 class="work">Skills</h3>
+              <h3 class="work">Languages</h3>
               <hr class="line2" />
               <div class="row text-center">
                 <div class="skills">
@@ -87,6 +87,119 @@
                 <div class="skills">
                   <img class="skillsimage" src="images/javascript.png" alt="" />
                   <h4>JAVASCRIPT</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row aln-center">
+          <div class="col-12 col-12-xlarge col-12-small">
+            <div class="box style3">
+              <h3 class="work">Libraries & Frameworks</h3>
+              <hr class="line2" />
+              <div class="row text-center">
+                <div class="skills">
+                  <img class="skillsimage" src="images/nodelogo.png" alt="" />
+                  <h4>NODE.JS</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/react.png" alt="" />
+                  <h4>REACT</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/redux.png" alt="" />
+                  <h4>REDUX</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/bootstrap.png" alt="" />
+                  <h4>BOOTSTRAP4</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/scrapy.png" alt="" />
+                  <h4>SCRAPY</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/tensorflow.png" alt="" />
+                  <h4>TENSORFLOW</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row aln-center">
+          <div class="col-12 col-12-xlarge col-12-small">
+            <div class="box style3">
+              <h3 class="work">Back-End</h3>
+              <hr class="line2" />
+              <div class="row text-center">
+                <div class="skills">
+                  <img
+                    class="skillsimage"
+                    src="images/mongodbatlas.png"
+                    alt=""
+                  />
+                  <h4>MONGODB ATLAS</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/awss3.png" alt="" />
+                  <h4>AWS S3</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/oracle.png" alt="" />
+                  <h4>ORACLE SQL</h4>
+                </div>
+                <div class="skills">
+                  <img
+                    class="skillsimage"
+                    src="images/elasticsearch.svg"
+                    alt=""
+                  />
+                  <h4>ELASTIC SEARCH 7</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/sqlite.png" alt="" />
+                  <h4>SQLITE</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row aln-center">
+          <div class="col-12 col-12-xlarge col-12-small">
+            <div class="box style3">
+              <h3 class="work">Other Technologies</h3>
+              <hr class="line2" />
+              <div class="row text-center">
+                <div class="skills">
+                  <img
+                    class="skillsimage"
+                    src="images/androidstudios.jpg"
+                    alt=""
+                  />
+                  <h4>ANDROID STUDIOS</h4>
+                </div>
+                <div class="skills">
+                  <img
+                    class="skillsimage"
+                    src="images/photoshoplogo.png"
+                    alt=""
+                  />
+                  <h4>PHOTOSHOP</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/lightroom.png" alt="" />
+                  <h4>LIGHTROOM</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/xd.png" alt="" />
+                  <h4>XD</h4>
+                </div>
+                <div class="skills">
+                  <img class="skillsimage" src="images/logic.png" alt="" />
+                  <h4>LOGIC PRO</h4>
                 </div>
               </div>
             </div>
