--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#work">Work</a></li>
         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
         <li><a href="#contact">Contact</a></li>
-        <li><a href="Daniel_Cao_Resume.pdf" target="_blank">Resume</a></li>
+        <!-- <li><a href="Daniel_Cao_Resume.pdf" target="_blank">Resume</a></li> -->
       </ul>
     </nav>
 
@@ -54,6 +54,7 @@
 
     <!-- Skills -->
     <article id="about" class="wrapper style2">
+      <br />
       <header>
         <h1>Skills</h1>
       </header>
@@ -210,6 +211,7 @@
 
     <!-- Work -->
     <article id="work" class="wrapper style2">
+      <br />
       <header>
         <h1>Work</h1>
       </header>
