--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="box style1">
               <h3 class="work">Projects</h3>
               <hr class="line" />
-              <a href="#" class="image featured"
+              <a href="/projects.html" class="image featured"
                 ><img src="images/Projects.jpg" />
               </a>
             </div>
