Added projects/UI UX pages

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="box style1">
               <h3 class="work">Projects</h3>
               <hr class="line" />
-              <a href="/projects.html" class="image featured"
+              <a href="src/projects.html" class="image featured"
                 ><img src="images/Projects.jpg" />
               </a>
             </div>
@@ -231,7 +231,7 @@
               <!-- <span class="icon solid featured fa-camera-retro"></span> -->
               <h3 class="work">UX/UI</h3>
               <hr class="line" />
-              <a href="#" class="image featured"
+              <a href="src/ui_ux.html" class="image featured"
                 ><img src="images/UI_UX_Design.jpg" alt="" />
               </a>
             </section>
