--- a/src/momscookbook.html
+++ b/src/momscookbook.html
@@ -8,7 +8,9 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Daniel Cao Projects</title>
+    <title>
+      Mom's Cook <i class="fa fa-address-book" aria-hidden="true"></i>
+    </title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="stylesheet" href="../assets/css/main.css" /> -->
@@ -51,7 +53,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ui_ux.html">UI/UX Designs</a>
@@ -66,48 +68,22 @@
 
     <!-- List of Projects! -->
     <div class="container-fluid project-title">
-      <h1
-        class="text-center"
-        style="font-size: 4em;margin-top: 1em;margin-bottom: 0.5em;"
-      >
+      <!-- <h1 class="text-center" style="font-size: 8em;margin-bottom: 0.5em;">
         My Projects
-      </h1>
+      </h1> -->
       <div class="container">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="../images/spotcrimeapi.png"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Crime Web Crawler</h5>
-            <p class="card-text">
-              Web scraping python program that scrapes coordinates of crimes to
-              improve zone creation for offenders. Utilized Scrapy framework for
-              web spiders. This program can populate an Elastic cluster or
-              SQLite datebase with crime data as a pipeline process.
-            </p>
-            <a href="scrapyproject.html" class="btn btn-primary">Learn more</a>
+        <div class="text-center" style="margin-top: 5em;margin-bottom: 1em;">
+          <h1 style="font-size: 4em;">Mom's Cook Book Mobile App</h1>
+        </div>
+
+        <div class="container">
+          <div
+            class="row justify-content-center"
+            style="margin-top:1em;margin-bottom:2em;"
+          >
+            <a href="#" class="btn btn-primary">Back to top</a>
           </div>
         </div>
-        <!-- <div class="card" style="width: 18rem;">
-          <img
-            src="../images/spotcrimeapi.png"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Path Learning Agent</h5>
-            <p class="card-text">
-              A reinforcement learning agent is tasked to explore a 2-D 5x5 grid
-              world in order to reach the terminal state as quickly and as
-              efficiently as possible. The project is meant to illustrate how an
-              agent is able to take a sequence of actions based on values given
-              to the agent by the environment to direct itself to goal states.
-            </p>
-            <a href="scrapyproject.html" class="btn btn-primary">Learn more</a>
-          </div>
-        </div> -->
       </div>
     </div>
 
