--- a/src/photography.html
+++ b/src/photography.html
@@ -8,25 +8,21 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Daniel Cao Projects</title>
+    <title>Daniel Cao Photography</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <link rel="stylesheet" href="../assets/css/main.css" /> -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../assets/css/projects.css" />
+    <!-- <link rel="stylesheet" href="../assets/css/projects.css" /> -->
     <!-- <link rel="stylesheet" href="" /> -->
   </head>
   <body>
     <!-- NAV BAR SECTION -->
-    <nav
-      id="nav"
-      class="navbar fixed-top navbar-expand-lg navbar-dark custom-nav"
-    >
+    <nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-dark">
       <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button
         class="navbar-toggler"
@@ -42,74 +38,64 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <a class="navbar-brand" href="../index.html">
-            <img src="../images/brand.png" width="30" height="30" alt="" />
-          </a>
           <li class="nav-item active">
             <a class="nav-link" href="../index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ui_ux.html">UI/UX Designs</a>
+            <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="photography.html">Photography Gallery</a>
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link disabled"
+              href="#"
+              tabindex="-1"
+              aria-disabled="true"
+              >Disabled</a
+            >
           </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
       </div>
     </nav>
     <!-- NAV BAR SECTION -->
-
-    <!-- List of Projects! -->
-    <div class="container-fluid project-title">
-      <h1
-        class="text-center"
-        style="font-size: 4em;margin-top: 1em;margin-bottom: 0.5em;"
-      >
-        My Projects
-      </h1>
-      <div class="container">
-        <div class="card" style="width: 18rem;">
-          <img
-            src="../images/spotcrimeapi.png"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Crime Web Crawler</h5>
-            <p class="card-text">
-              Web scraping python program that scrapes coordinates of crimes to
-              improve zone creation for offenders. Utilized Scrapy framework for
-              web spiders. This program can populate an Elastic cluster or
-              SQLite datebase with crime data as a pipeline process.
-            </p>
-            <a href="scrapyproject.html" class="btn btn-primary">Learn more</a>
-          </div>
-        </div>
-        <!-- <div class="card" style="width: 18rem;">
-          <img
-            src="../images/spotcrimeapi.png"
-            class="card-img-top"
-            alt="..."
-          />
-          <div class="card-body">
-            <h5 class="card-title">Path Learning Agent</h5>
-            <p class="card-text">
-              A reinforcement learning agent is tasked to explore a 2-D 5x5 grid
-              world in order to reach the terminal state as quickly and as
-              efficiently as possible. The project is meant to illustrate how an
-              agent is able to take a sequence of actions based on values given
-              to the agent by the environment to direct itself to goal states.
-            </p>
-            <a href="scrapyproject.html" class="btn btn-primary">Learn more</a>
-          </div>
-        </div> -->
-      </div>
-    </div>
+    <h1>THIS IS THE PHOTOGRAPHY PAGE!</h1>
 
     <!-- <script src="" async defer></script> -->
     <script
