--- a/src/ui_ux.html
+++ b/src/ui_ux.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Daniel Cao Projects</title>
+    <title>Daniel Cao UI/UX Designs</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="stylesheet" href="../assets/css/main.css" /> -->
@@ -51,10 +51,10 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="projects.html">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ui_ux.html">UI/UX Designs</a>
+            <a class="nav-link" href="#">UI/UX Designs</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="photography.html">Photography Gallery</a>
@@ -68,26 +68,25 @@
     <div class="container-fluid project-title">
       <h1
         class="text-center"
-        style="font-size: 4em;margin-top: 1em;margin-bottom: 0.5em;"
+        style="font-size: 4em;margin-top: 2em;margin-bottom: 0.5em;"
       >
-        My Projects
+        UI/UX Designs
       </h1>
       <div class="container">
         <div class="card" style="width: 18rem;">
           <img
-            src="../images/spotcrimeapi.png"
+            src="../images/UI_UX_Design.jpg"
             class="card-img-top"
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Crime Web Crawler</h5>
+            <h5 class="card-title">Mom's Cook Book</h5>
             <p class="card-text">
-              Web scraping python program that scrapes coordinates of crimes to
-              improve zone creation for offenders. Utilized Scrapy framework for
-              web spiders. This program can populate an Elastic cluster or
-              SQLite datebase with crime data as a pipeline process.
+              A mobile application that can create & save food recipes. This app
+              is currently being developed in React JS for frontend and mongo db
+              for backend.
             </p>
-            <a href="scrapyproject.html" class="btn btn-primary">Learn more</a>
+            <a href="momscookbook.html" class="btn btn-primary">Learn more</a>
           </div>
         </div>
         <!-- <div class="card" style="width: 18rem;">
